Meilleures conventions de nommages : spécifique au language + Google

--- a/index.html
+++ b/index.html
@@ -106,13 +106,14 @@
 
 				<h2 id="qualite">Qualité</h2>
 				<p>
-					De manière à assurer l'homogénéité et la qualité dans les dépôts de l'organisation, les règles suivantes seront respectées :
+					De manière à assurer l'homogénéité et la qualité du code dans les dépôts de l'organisation, les règles suivantes seront respectées :
 				</p>
 				<ul>
-					<li>la notation <a href="https://fr.wikipedia.org/wiki/Camel_case">camelCase</a> sera utilisée ;</li>
-					<li>les tabulations seront utilisées pour l'indentation ;</li>
+					<li>les conventions de nommages adoptées par chaque language seront respectivement utilisées ;</li>
+					<li>les tabulations "<span class="code">\t</span>" seront utilisées pour l'indentation ;</li>
 					<li>les espaces en fin de lignes (traling spaces en anglais) seront supprimés ;</li>
-					<li>seuls les fichiers sources seront traqués : l'utilisation d'un fichier <span class="code">.gitignore</span> est encouragée.</li>
+					<li>seuls les fichiers sources seront traqués : l'utilisation d'un fichier <span class="code">.gitignore</span> est encouragée ;</li>
+					<li>si un language ne définit pas de conventions, et si la règle n'est pas déjà énoncée ici, alors il faudra se baser sur <a href="https://github.com/google/styleguide#google-style-guides">les règles définies par Google</a>.</li>
 				</ul>
 
 
