Ajout d'explication pour git, GitHub, Travis

--- a/index.html
+++ b/index.html
@@ -118,6 +118,27 @@
 
 
 				<h2 id="faq">FAQ</h2>
+				<h3>Git, qu'est-ce que c'est ?</h3>
+				<p>
+					Git est un logiciel de gestion de versions décentralisé, c'est à dire un logiciel qui permet de stocker un ensemble de fichiers en conservant la chronologie de toutes les modifications qui ont été effectuées dessus, en permettant à chacun de travailler à son rythme, de façon désynchronisée des autres, et d'offrir un moyen à chacun des développeurs de s'échanger leur travaux respectifs.
+				</p>
+				<p>
+					Ce <a href="https://rogerdudler.github.io/git-guide/index.fr.html">petit guide git</a> pourra vous aider si vous débutez.
+				</p>
+				<h3>GitHub, qu'est-ce que c'est ?</h3>
+				<p>
+					GitHub est un service web d'hébergement et de gestion de développement de logiciels, utilisant le logiciel de gestion de versions décentralisé Git.
+				</p>
+				<p>
+					Si vous le souhaitez, GitHub propose un <a href="https://guides.github.com/activities/hello-world/">Hello World</a> pour se familiariser avec la plateforme.
+				</p>
+				<h3>Travis, qu'est-ce que c'est ?</h3>
+				<p>
+					Travis CI est un logiciel libre d'intégration continue. Il fournit un service en ligne utilisé pour compiler, tester et déployer le code source des logiciels développés, notamment en lien avec le service d'hébergement du code source GitHub.
+				</p>
+				<p>
+					Pour bien démarrer avec Travis, rien de mieux que <a href="https://docs.travis-ci.com/user/for-beginners">la présentation officielle des concepts de base</a>.
+				</p>
 				<h3>Pourquoi je ne peux pas mettre mon code sur le drive ?</h3>
 				<p>
 					Car Github est bien mieux adapté.
