Ajout d'informations pour les ctp

--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
 				</ul>
 				<h3>Pour un CTP</h3>
 				<p>
-					<span class="code">ig2i-${promo}-${matière}-${année}-ctp</span>
+					<span class="code">ig2i-${promo}-${matière}-${année}-ctp${numéro de session}-${titre}</span>, avec :
 				</p>
+				<ul>
+					<li><span class="code">{numéro de session}</span> : numéro de session, soit <span class="code">1</span> pour la session initiale ou <span class="code">2</span> pour un rattrapage.</li>
+				</ul>
 				<h3>Pour un projet associé à une matière</h3>
 				<p>
 					<span class="code">ig2i-${promo}-${matière}-${année}-projet-${identifiant}</span>, avec :
