--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<ul>
 					<li>les conventions de nommages adoptées par chaque language seront respectivement utilisées ;</li>
 					<li>les tabulations "<span class="code">\t</span>" seront utilisées pour l'indentation ;</li>
-					<li>les espaces en fin de lignes (traling spaces en anglais) seront supprimés ;</li>
+					<li>les espaces en fin de lignes (trailing spaces en anglais) seront supprimés ;</li>
 					<li>seuls les fichiers sources seront traqués : l'utilisation d'un fichier <span class="code">.gitignore</span> est encouragée ;</li>
 					<li>si un language ne définit pas de conventions, et si la règle n'est pas déjà énoncée ici, alors il faudra se baser sur <a href="https://github.com/google/styleguide#google-style-guides">les règles définies par Google</a>.</li>
 				</ul>
