--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					Salut à tou·te·s les IG2ien·ne·s !
 				</p>
 				<p>
-					Ce site a pour but de vous initier aux régles et conseils d'utilisation de votre organisation : <a href="https://github.com/eleves-ig2i">eleves-ig2i</a>. Si vous n'avez jamais utilisé Git, son utilisation vous semblera déroutante, voir compliquée au début, mais d'ici quelque temps vous remercirez les élèves qui ont voulu passer de Google Drive à GitHub !
+					Ce site a pour but de vous initier aux règles et conseils d'utilisation de votre organisation : <a href="https://github.com/eleves-ig2i">eleves-ig2i</a>. Si vous n'avez jamais utilisé Git, son utilisation vous semblera déroutante, voir compliquée au début, mais d'ici quelque temps vous remercirez les élèves qui ont voulu passer de Google Drive à GitHub !
 				</p>
 
 
@@ -80,8 +80,8 @@
 					<span class="code">ig2i-${promo}-${événement}-${année}-${outil}</span>, avec :
 				</p>
 				<ul>
-					<li><span class="code">${événement}</span> : événement parmis JPO, JDN, RI, NDL5 ;</li>
-					<li><span class="code">${outil}</span> : type de l'outil réalisé pour l'événement.</li>
+					<li><span class="code">${événement}</span> : évènement parmis JPO, JDN, RI, NDL5 ;</li>
+					<li><span class="code">${outil}</span> : type de l'outil réalisé pour l'évènement.</li>
 				</ul>
 				<h3>Quelques exemples</h3>
 				<ul>
